[project]
name = "rag-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.10.0",
    "langgraph>=1.0.3",
    "opensearch-py>=3.0.0",
    "sentence-transformers>=5.1.2",
]
